--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,9 @@
-streamlit==1.39.0
-pandas==2.2.3
-rapidfuzz==3.10.1
-gspread==6.1.4
-google-auth==2.36.0
-google-auth-oauthlib==1.2.1
-google-auth-httplib2==0.2.0
-plotly==5.24.1
-numpy==2.1.3
-openpyxl==3.1.5
-twilio==9.3.7
-python-dateutil==2.9.0
-requests==2.32.3
+streamlit>=1.39.0
+pandas>=2.0.0
+gspread>=5.12.0
+google-auth>=2.23.0
+rapidfuzz>=3.5.0
+plotly>=5.18.0
+twilio>=8.10.0
+numpy>=1.24.0
+Pillow>=10.0.0
